--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>org.example</groupId>
     <artifactId>RestAssuredAPITesting</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>data</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
