request id has been randomly generated

--- a/src/test/java/mobile_recharge/mobile_recharge.properties
+++ b/src/test/java/mobile_recharge/mobile_recharge.properties
@@ -1,10 +1,10 @@
 receiver_mobile= 01621215877
-mobile_operator= GP
+mobile_operator= AIRTEL
 mobile_type= PREPAID
 receiver_name= test recharge
 wallet= 01715321485
 is_fp_auth= false
 credential= 9876
 amount= 11.31
-request_id= 0331001203207
+#request_id= 0331001203207
 
