success, failed, reverse, producer, consumer(up & down) cases for nagad money out

--- a/src/test/java/nagad_money_out/nagad_money_out.properties
+++ b/src/test/java/nagad_money_out/nagad_money_out.properties
@@ -1,6 +1,6 @@
 fromAc= 01715321485
-amount= 20.21
-requestId= 08835192227215_5213
+amount= 20.24
+#requestId= 08835192227215_5215
 financialInstitute= NAGAD
 toAc= 01300001700
 channel= tally
